# messycanvas

./: Cargo.toml  README.md
examples/: canvasd.toml  config.toml
messycanvascore/: Cargo.toml
messycanvascore/src/: cfg.rs  cli.rs  lib.rs  logging.rs
messycanvasctl/: Cargo.toml
messycanvasctl/src/: main.rs
src/: cfg.rs  cli.rs  client.rs  daemon.rs  error.rs  exit.rs  lib.rs  logging.rs  main.rs  priv_macro.rs  srv.rs
