[package]
name = "messycanvas"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
description = "Secure environment to execute untrusted code"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "canvasd"
path = "src/main.rs"

[dependencies]
messycanvascore = {path = "messycanvascore"}

pretty_logger = "^0.1"
log = "^0.3"
time = "^0.1"

[workspace]
members = [
    "messycanvasctl",
    "messycanvascore",
]
