[package]
name = "messycanvas"
version = "0.0.0-dev.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
description = "Secure environment to execute untrusted code"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
log = { version = "^0.4.1", features = ["std"] }
clap = "^2"
simple_logger = "^0.5.0"
toml = "^0.4.6"
lazy_static = "^1.0.0"

#hyper = "0.12"
#futures = "0.1.21"

#[target.'cfg(unix)'.dependencies]
#hyperlocal = "^0.4.1"
