[package]
name = "messycanvascore"
version = "0.0.0-dev.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
description = "Core component shared by canvasd and canvasctl"
license = "Apache-2.0"

[dependencies]
clap = "^2"
log = { version = "^0.4.1", features = ["std"] }
simple_logger = "^0.5.0"
